fix: css alignment

--- a/docs/source/assets/styles/components/_links.sass
+++ b/docs/source/assets/styles/components/_links.sass
@@ -55,7 +55,7 @@ h1 > a.headerlink::before, h2 > a.headerlink::before
             border-radius: 12px
             color: var(--pst-color-link)
             font-weight: 500
-            font-size: 14px
+            font-size: 16px
             transition: all 0.3s ease
             text-decoration: none
             width: 100%
