--- a/docs/source/assets/styles/components/_search.sass
+++ b/docs/source/assets/styles/components/_search.sass
@@ -8,6 +8,9 @@
   width: 100%
   padding: 3px 4px
 
+  .DocSearch-Button-Placeholder
+    color: inherit
+
   @media (min-width: 1200px)
     min-width: 180px
 
