--- a/docs/source/assets/styles/layout/_main.sass
+++ b/docs/source/assets/styles/layout/_main.sass
@@ -71,6 +71,7 @@ main
 
 .bd-main .bd-content .bd-article-container
   max-width: 50em
+  margin-top: 8px
 
 @media (min-width: 960px)
   .bd-page-width
